<resources>
    <string name="app_name">Kilogram</string>
    <string name="facebook_application_id">379491969582169</string>
    <string name="facebook_login_protocol_scheme">fb379491969582169</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main">На главную</string>
    <string name="exercises">Упражнения</string>
    <string name="programs">Программы</string>
    <string name="trainings">Тренировки</string>
    <string name="measurements">Замеры</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="finish_training">Завершить тренировку</string>
    <string name="delete_session">Удалить тренировку</string>
    <string name="exercise">Упражнение</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="images">Изображения</string>
    <string name="main_muscle">Целевые мышцы</string>
    <string name="targeted_muscles">Второстепенные мышцы</string>
    <string name="mechanics_type">Тип</string>
    <string name="exercise_type">Вид</string>
    <string name="equipment">Оборудование</string>
    <string name="description">Описание</string>
    <string name="technique">Техника выполнения</string>
    <string name="training_session">Тренировка</string>
    <string name="training_program">Тренировочная программа</string>
    <string name="calculator">Калькулятор</string>
    <string name="add_measurement">Добавить</string>
    <string name="measurement_history">История</string>
    <string name="enter_value">Введите значение параметра</string>
    <string name="parameter">Параметр</string>
    <string name="actual_value">Фактическое значение</string>
    <string name="expected_value">Ожидаемое значение</string>
    <string name="percent">Процент</string>
    <string name="delete_exercise">Удалить упражнение</string>
    <string name="first_phase">Первая фаза упражнения</string>
    <string name="second_phase">Вторая фаза упражнения</string>
    <string name="addExercise">Добавить упражнение</string>
    <string name="num">№</string>
    <string name="weight">Вес</string>
    <string name="reps">Повторения</string>
    <string name="time">Время</string>
    <string name="distance">Расстояние</string>
    <string name="choose_exercise">Выбрать упражнение</string>
    <string name="measures">Меры измерения</string>
    <string name="rest_time_after">Время отдыха, сек</string>
    <string name="after_warm_up_sets">разминочных подходов</string>
    <string name="after_work_sets">рабочих подходов</string>
    <string name="after_exercise">упражнения</string>
    <string name="execution_strategy">Стратегия выполнения</string>
    <string name="weight_kg">Вес, кг</string>
    <string name="time_sec">Время, сек</string>
    <string name="distance_metres">Расстояние, метры</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название</string>
    <string name="finish_exercise">Завершить упражнение</string>
    <string name="added_to_favorite">Добавленные в избранное</string>
    <string name="performed_earlier">Выполняемые ранее</string>
    <string name="sort">Сортировка</string>
    <string name="filter">Фильтр</string>
    <string name="trained_muscles">Тренируемые мышцы</string>
    <string name="to_search">Найти</string>
    <string name="search">Поиск</string>
    <string name="ok">OK</string>
    <string name="favorite">Избранное</string>
    <string name="calendar">Календарь</string>
    <string name="share">Поделиться</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="messages">Сообщения</string>
    <string name="user_photo">Фотография пользователя</string>
    <string name="verify_your_email">Подтвердите ваш email адрес.</string>
    <string name="you">Вы: \u0020</string>
    <string name="people">Люди</string>
    <string name="directory">Справочник</string>
    <string name="community">Сообщество</string>
    <string name="menu">Меню</string>
    <string name="common">Общие</string>
    <string name="estimate_app">Оценить приложение</string>
    <string name="timer">Таймер</string>
    <string name="edit">Редактировать</string>
    <string name="other">Другое</string>
    <string name="darkTheme">Тёмная тема</string>
    <string name="running">Выполняющиеся</string>
    <string name="planned">Запланированные</string>
    <string name="finished">Выполненные</string>
    <string name="exerciseTarget">Цель упражнения</string>
    <string name="targets">Цели</string>
    <string name="profile">Профиль</string>
    <string name="more">Ещё</string>
    <string name="chooseProgram">Выберите тренировочную программу</string>
    <string name="chooseProgramDay">Выбирите тренировочный день</string>
    <string name="sets">Подходы</string>
    <string name="add_set">Добавить подход</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="catalog">Каталог</string>
    <string name="home">Главная</string>
    <string name="startTrainingButton">Начать\nтренировку</string>
    <string name="addMeasurementButton">Добавить\nзамеры</string>
    <string name="addPhotoButton">Добавить\nфото</string>
    <string name="photos">Фотографии</string>
    <string name="create_program">Создать программу</string>
    <string name="create_training_day">Создать тренировочный день</string>
    <string name="startTraining">Начать тренировку</string>
    <string name="compound">Базовые</string>
    <string name="isolated">Изолированные</string>
    <string name="photo">Фото</string>
    <string name="add_measurements">Добавить замеры</string>
    <string name="ideal_body_proportions_calculator">Калькулятор идеальных пропорций тела</string>
    <string name="proportions_calculator">Калькулятор пропорций</string>
    <string name="profile_editing">Редактирование профиля</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="username">Имя</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="subscribers">Подписчики</string>
    <string name="subscriptions">Подписки</string>
    <string name="new_post">Новый пост</string>
    <string name="title">Заголовок</string>
    <string name="content">Содержание</string>
    <string name="publish">Опубликовать</string>
    <string name="add_image">Добавить изображение</string>
    <string name="write">Написать</string>
    <string name="program_days">Тренировончые дни</string>
    <string name="attach_training_program">Прикрепить тренировочную программу</string>
    <string name="choose">Выбрать</string>
    <string name="share_text">Kilogram - крутой фитнес трекер. Переходи по ссылке и тренируйся вместе со мной.</string>
    <string name="add_training">Добавить тренировку</string>
    <string name="add_to_my_programs">Добавить в Мои программы</string>
    <string name="program_added_to_my_programs">Программа добавлена в Мои программы</string>
    <string name="training_parameters">Параметры тренировки</string>
    <string name="delete_training">Удалить тренировку</string>
    <string name="delete_photo">Удалить фотографию</string>
    <string name="delete_measurements">Удалить измерения</string>
    <string name="delete_program">Удалить программу</string>
    <string name="delete_day">Удалить день</string>
    <string name="need_to_sign_in">Для просмотра данной страницы необходимо авторизоваться</string>
    <string name="popular_publications">Популярные публикации</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="map">Карта</string>
    <string name="training_programs">Программы тренировок</string>
    <string name="gender">Пол</string>
    <string name="about_me">Обо мне</string>
    <string name="training_target">Цель тренировок</string>
    <string name="gym">Спортзал</string>
    <string name="male">мужской</string>
    <string name="female">женский</string>

</resources>