<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/chats"
                android:icon="@drawable/ic_message"
                android:title="@string/messages"
                android:checkable="false"
                android:visible="false"/>
            <item
                android:id="@+id/editProfile"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_profile"
                android:checkable="false"
                android:visible="false"/>
            <item
                android:id="@+id/signInSignOut"
                android:icon="@drawable/ic_person"
                android:title="@string/sign_in"
                android:checkable="false" />
        </menu>
    </item>
    
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/common"
                android:icon="@drawable/ic_settings"
                android:title="@string/common"
                android:checkable="false" />
            <item
                android:id="@+id/training"
                android:icon="@drawable/ic_fitness_center"
                android:title="@string/training_session"
                android:checkable="false" />
            <item
                android:id="@+id/timer"
                android:icon="@drawable/ic_timer"
                android:title="@string/timer"
                android:checkable="false" />
            <item
                android:id="@+id/darkTheme"
                android:icon="@drawable/ic_brightness_2"
                android:title="@string/darkTheme"
                android:checkable="false" />
        </menu>
    </item>
    
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info"
                android:title="@string/about"
                android:checkable="false" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"
                android:checkable="false" />
            <item
                android:id="@+id/estimate"
                android:icon="@drawable/ic_favorite"
                android:title="@string/estimate_app"
                android:checkable="false" />
        </menu>
    </item>

</menu>