<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="vm"
            type="com.dmitrysimakov.kilogram.ui.exercises.detail.DetailedExerciseViewModel"/>
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.exercises.detail.DetailedExerciseFragment">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fragment_padding">
            
            <TextView
                android:id="@+id/exercise_name"
                style="@style/Field"
                android:text="@{vm.exercise.name}"
                tools:text="@string/exercise_name"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/first_phase"
                    app:assetsImage='@{"exercises/"+ vm.exercise.name +"_1.jpeg"}'
                    tools:src="@drawable/exercise_sample_1"/>
                
                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/second_phase"
                    app:assetsImage='@{"exercises/"+ vm.exercise.name +"_2.jpeg"}'
                    tools:src="@drawable/exercise_sample_2"/>
            
            </LinearLayout>
            
            <TextView
                style="@style/Label"
                android:text="@string/main_muscle"/>
            
            <TextView
                android:id="@+id/main_muscle"
                style="@style/Field"
                android:text="@{vm.exercise.main_muscle}"
                tools:text="@string/main_muscle"/>
            
            <View style="@style/VerticalDivider"/>
            
            <TextView
                style="@style/Label"
                android:text="@string/targeted_muscles"/>
            
            <TextView
                android:id="@+id/targeted_muscles"
                style="@style/Field"
                android:text="@{vm.targetedMuscles}"
                tools:text="@string/targeted_muscles"/>
            
            <View style="@style/VerticalDivider"/>
            
            <TextView
                style="@style/Label"
                android:text="@string/mechanics_type"/>
            
            <TextView
                android:id="@+id/mechanics_type"
                style="@style/Field"
                android:text="@{vm.exercise.mechanics_type}"
                tools:text="@string/mechanics_type"/>
            
            <View style="@style/VerticalDivider"/>
            
            <TextView
                style="@style/Label"
                android:text="@string/exercise_type"/>
            
            <TextView
                android:id="@+id/exercise_type"
                style="@style/Field"
                android:text="@{vm.exercise.exercise_type}"
                tools:text="@string/exercise_type"/>
            
            <View style="@style/VerticalDivider"/>
            
            <TextView
                style="@style/Label"
                android:text="@string/equipment"/>
            
            <TextView
                android:id="@+id/equipment"
                style="@style/Field"
                android:text="@{vm.exercise.equipment}"
                tools:text="@string/equipment"/>
            
            <View style="@style/VerticalDivider"/>
            
            <TextView
                style="@style/Label"
                android:text="@string/description"/>
            
            <TextView
                android:id="@+id/description"
                style="@style/Field"
                android:text="@{vm.exercise.description}"
                tools:text="@string/description"/>
        
        </LinearLayout>
    
    </ScrollView>

</layout>