<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
        <variable
            name="exercise_measures"
            type="com.dmitrysimakov.kilogram.data.local.relation.ExerciseMeasures" />
    </data>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp">
            
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/num"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:goneUnless="@{exercise_measures.weight}" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reps"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:goneUnless="@{exercise_measures.reps}" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:goneUnless="@{exercise_measures.time}" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:goneUnless="@{exercise_measures.distance}" />
        
        </LinearLayout>
        
        <View style="@style/VerticalDivider" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_training_set" />
    
    </LinearLayout>

</layout>