<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
        <variable
            name="vm"
            type="com.dmitrysimakov.kilogram.ui.profile.edit_profile.EditProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_padding">
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:imageUrl="@{vm.photoUrl}"
                goneUnless="@{vm.photoUrl != null}"
                tools:src="@tools:sample/avatars" />
            
            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="25dp"
                goneUnless="@{vm.photoUrl == null}"
                tools:visibility="gone"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/username">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@tools:sample/full_names"/>
                
            </com.google.android.material.textfield.TextInputLayout>
        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:layout_marginStart="12dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:text="@string/gender"/>
            
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:orientation="horizontal">
                
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"/>
                
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"/>
        
            </RadioGroup>
        
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/about_me">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.about}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="качок-новичок"/>
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/training_target">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.trainingTarget}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="похудеть"/>
        
            </com.google.android.material.textfield.TextInputLayout>
        
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/gym">
            
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.gym}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="тренируюсь дома"/>
        
            </com.google.android.material.textfield.TextInputLayout>
            
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:text="@string/save_changes"/>
            
        </LinearLayout>
    
    </ScrollView>
    
</layout>