<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    app:startDestination="@id/profileFragment">
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.dmitrysimakov.kilogram.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.dmitrysimakov.kilogram.ui.profile.edit_profile.EditProfileFragment"
        android:label="@string/profile_editing"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/to_followersFragment"
            app:destination="@id/followersFragment" />
    </fragment>
    <fragment
        android:id="@+id/followersFragment"
        android:name="com.dmitrysimakov.kilogram.ui.profile.followers.FollowersFragment"
        android:label="@string/followers"
        tools:layout="@layout/fragment_followers" >
        <action
            android:id="@+id/to_messagesFragment"
            app:destination="@id/messagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.dmitrysimakov.kilogram.ui.subscriptions.messages.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>